tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__Chloroform-AAAAAAAAAAAAAAAAAAAHFQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1813,
  "prerequisites": [
    1812
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The next step is to mix methane and chlorine to make chloroform. Make sure you have your circuit set correctly.\n\nNow is probably a good time to look at stockpiling chlorine. Look for salt ores, or lapis veins. You can also make salt water with ghast tears. Better get started with IC2 crops, you'll need a lot of chlorine later!\n\n[note]Lucky for you though, in this line we can recover all of our Chlorine.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lChloroform",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    1812
  ],
  "rewards": [],
  "tasks": []
}
